# cmake-example

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
